build.log
   Compiling SarOS v0.1.0 (/home/meow/SarOSx64)
error: expected type, found `{`
  --> src/arch/x86_64/io.rs:24:33
   |
24 | pub unsafe fn inw(port: u16) -> {
   |                                 ^ expected type

error[E0583]: file not found for module `logger`
 --> src/drivers.rs:2:1
  |
2 | pub mod logger;
  | ^^^^^^^^^^^^^^^
  |
  = help: to create the module `logger`, create file "src/drivers/logger.rs" or "src/drivers/logger/mod.rs"
  = note: if there is a `mod logger` elsewhere in the crate already, import it with `use crate::...` instead

error: this file contains an unclosed delimiter
   --> src/mm/heap.rs:246:3
    |
188 | unsafe impl GlobalAlloc for KernelHeap {
    |                                        - unclosed delimiter
...
193 |         if size == 0 { return align as *mut u8;
    |                      - this delimiter might not be properly closed...
...
208 |     }
    |     - ...as it matches this but it has different indentation
...
246 | }
    |  ^

For more information about this error, try `rustc --explain E0583`.
error: could not compile `SarOS` (bin "SarOS") due to 3 previous errors
